--- a/exp2/pages/index/index.wxml
+++ b/exp2/pages/index/index.wxml
@@ -7,7 +7,7 @@
   <image src='/images/weather_icon/{{now.icon}}.svg' mode='widthFix'></image>
   <view class='detail'>
     <view class='bar'>
-      <view class='box'>温度</view>
+      <view class='box'>湿度</view>
       <view class='box'>气压</view>
       <view class='box'>能见度</view>
     </view>
